# rocket_disel_question

./: .env  Cargo.toml  Rocket.toml  error.txt
migrations/2024-06-09-113243_create_my_table/: down.sql  up.sql
src/: main.rs  schema.rs
