[package]
name = "dft"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.*", features = ["derive"] }
rocket = { version = "0.5", features = ["json", "uuid"] }
rocket_sync_db_pools = { version = "0.1.0", features = [
    "diesel_postgres_pool",
] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "serde_json"] }
uuid = { version = "1.8.0", features = ["v4"] }
